[package]
name = "rustc"
version = "1.0.0"
authors = ["The Rust Project Developers"]

[lib]
name = "rustc"
path = "lib.rs"

[dependencies]
rustc_llvm = { path = "../librustc_llvm" }
rustc_back = { path = "../librustc_back" }
rustc_front = { path = "../librustc_front" }
rustc_data_structures = { path = "../librustc_data_structures" }
