[package]
name = "rustc_trans"
version = "1.0.0"
authors = ["The Rust Project Developers"]

[lib]
name = "rustc_trans"
path = "lib.rs"

[dependencies]
rustc = { path = "../librustc" }
rustc_back = { path = "../librustc_back" }
rustc_front = { path = "../librustc_front" }
rustc_llvm = { path = "../librustc_llvm" }
rustc_platform_intrinsics = { path = "../librustc_platform_intrinsics" }
