[package]
name = "rustdoc"
version = "1.0.0"
authors = ["The Rust Project Developers"]
build = "build.rs"

[lib]
name = "rustdoc"
path = "lib.rs"

[[bin]]
name = "rustdoc"
path = "../driver/driver.rs"

[dependencies]
rustc_trans = { path = "../librustc_trans" }
rustc_driver = { path = "../librustc_driver" }
rustc_resolve = { path = "../librustc_resolve" }
rustc_lint = { path = "../librustc_lint" }
rustc_back = { path = "../librustc_back" }
rustc_front = { path = "../librustc_front" }

[build-dependencies]
gcc = "0.3"
