[package]
name = "serialize"
version = "1.0.0"
authors = ["The Rust Project Developers"]

[lib]
name = "serialize"
path = "lib.rs"
doctest = false

[dependencies]
std = { path = "../libstd" }
log = { path = "../liblog" }
rustc_unicode = { path = "../librustc_unicode" }
collections = { path = "../libcollections" }
